Time: 57 ms (29.02%) | Memory: 51.6 MB (45.09%) - LeetSync